--- a/Dia_46_1mayo.html
+++ b/Dia_46_1mayo.html
@@ -1727,7 +1727,7 @@ message(&quot;\n# Extraemos los primeros 1000 caracteres:&quot;)</code></pre>
 <li><p><code>scientific</code>: el valor predeterminado es FALSO, pero use VERDADERO para la notación científica.</p></li>
 <li><p><code>justify</code>: predeterminado a ninguno, pero puede mostrar cadenas a “derecha”, “izquierda” y “centro”.</p></li>
 <li><p><code>nsmall</code>: indica el número total después del lugar decimal.</p></li>
-<li><p><code>dígitos</code>: indica el número total antes y después del lugar decimal.</p></li>
+<li><p><code>dígits</code>: indica el número total antes y después del lugar decimal.</p></li>
 </ol>
 <pre class="r"><code># Tomemos un ejemplo de formateo de cadenas para notación científica.
 message(&quot;\n# Tomemos un ejemplo de formateo de cadenas para notación científica.&quot;)</code></pre>
